--- a/3_models_selection/model_randomforestregressor.ipynb
+++ b/3_models_selection/model_randomforestregressor.ipynb
@@ -67,11 +67,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "def final_preprocessing_eval(df, dev_stats):\n",
     "    working_df_dev = df.copy()\n",
+    "\n",
+    "    for index, row in working_df_dev.iterrows():\n",
+    "        if 'data_channel' in row and not row['num_keywords'] >= 0:\n",
+    "            working_df_dev.at[index, 'num_keywords'] = dev_stats['num_keywords_mean'][row['data_channel']]\n",
     "\n",
     "    enc = OneHotEncoder()\n",
     "    encoded_df = pd.concat([df['weekday'], df['data_channel']], axis=1)\n",
@@ -80,10 +84,6 @@
     "    additional_columns = enc.get_feature_names_out()\n",
     "    working_df_dev[additional_columns] = encoded_df.toarray()\n",
     "    working_df_dev.drop(['weekday', 'data_channel', 'url', 'id'], axis = 1, inplace=True)\n",
-    "\n",
-    "    for index, row in working_df_dev.iterrows():\n",
-    "        if 'data_channel' in row and not row['num_keywords'] >= 0:\n",
-    "            working_df_dev.at[index, 'num_keywords'] = dev_stats['num_keywords_mean'][row['data_channel']]\n",
     "\n",
     "    working_df_dev['n_tokens_content'] = np.log(1 + working_df_dev['n_tokens_content'])\n",
     "\n",
@@ -126,18 +126,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-14T22:20:31.307392Z",
-     "start_time": "2023-06-14T22:20:31.297587Z"
+     "end_time": "2023-06-14T22:25:11.629948Z",
+     "start_time": "2023-06-14T22:25:11.622754Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-14T22:20:32.322366Z",
-     "start_time": "2023-06-14T22:20:32.309563Z"
+     "end_time": "2023-06-14T22:25:12.177972Z",
+     "start_time": "2023-06-14T22:25:12.148162Z"
     }
    },
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "def calcDrop(res):\n",
@@ -283,20 +283,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-14T22:20:32.937449Z",
-     "start_time": "2023-06-14T22:20:32.914066Z"
+     "end_time": "2023-06-14T22:25:12.957628Z",
+     "start_time": "2023-06-14T22:25:12.938403Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
       "text/plain": "(30410, 7917)"
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,8 +313,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-14T22:20:36.146608Z",
-     "start_time": "2023-06-14T22:20:33.426688Z"
+     "end_time": "2023-06-14T22:25:16.457105Z",
+     "start_time": "2023-06-14T22:25:13.744556Z"
     }
    }
   },
@@ -512,8 +512,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 21,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "RandomForestRegressor(bootstrap=False, max_depth=40, max_features='sqrt',\n                      min_samples_leaf=4, min_samples_split=3,\n                      n_estimators=1000)",
+      "text/html": "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestRegressor(bootstrap=False, max_depth=40, max_features=&#x27;sqrt&#x27;,\n                      min_samples_leaf=4, min_samples_split=3,\n                      n_estimators=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestRegressor</label><div class=\"sk-toggleable__content\"><pre>RandomForestRegressor(bootstrap=False, max_depth=40, max_features=&#x27;sqrt&#x27;,\n                      min_samples_leaf=4, min_samples_split=3,\n                      n_estimators=1000)</pre></div></div></div></div></div>"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X = working_df_dev.drop(columns=[\"shares\"]).values\n",
     "y = working_df_dev[\"shares\"].values\n",
@@ -524,8 +534,8 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2023-06-14T22:23:22.104710Z",
      "start_time": "2023-06-14T22:21:12.238851Z"
     }
    }
@@ -547,8 +557,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Id    Predicted\n",
+      "count   7917.000000  7917.000000\n",
+      "mean   35679.634584  1877.615490\n",
+      "std     2289.051312   675.617019\n",
+      "min    31715.000000   373.108967\n",
+      "25%    33699.000000  1375.974408\n",
+      "50%    35680.000000  1749.879672\n",
+      "75%    37661.000000  2258.970268\n",
+      "max    39643.000000  9334.171476\n"
+     ]
+    }
+   ],
    "source": [
     "# Make final predictions\n",
     "y_pred = best_model.predict(df_working_df_eval.values)\n",
@@ -559,10 +585,14 @@
     "new_df['Id'] = id_col\n",
     "new_df['Predicted'] = final_preds\n",
     "print(new_df.describe())\n",
-    "new_df.to_csv('../output/NAME.csv', columns=['Id','Predicted'], index=False)"
+    "new_df.to_csv('../output/output_random_forest_regr_cv_2.csv', columns=['Id','Predicted'], index=False)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-14T22:25:32.054073Z",
+     "start_time": "2023-06-14T22:25:29.283921Z"
+    }
    }
   }
  ],
