--- a/3_models_selection/model_xgboost_with_logs.ipynb
+++ b/3_models_selection/model_xgboost_with_logs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-11T10:45:34.450826Z",
@@ -24,12 +24,13 @@
     "from xgboost import XGBRegressor\n",
     "\n",
     "from sklearn.metrics import mean_squared_error, make_scorer\n",
-    "from sklearn.metrics import r2_score"
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.feature_selection import RFECV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +249,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +273,7 @@
        "(31715, 50)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-11T10:39:20.523112Z",
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -513,7 +514,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/tmp/ipykernel_223143/1086665153.py:13: FutureWarning: Not prepending group keys to the result index of transform-like apply. In the future, the group keys will be included in the index, regardless of whether the applied function returns a like-indexed object.\n",
+      "/var/tmp/ipykernel_217480/1086665153.py:13: FutureWarning: Not prepending group keys to the result index of transform-like apply. In the future, the group keys will be included in the index, regardless of whether the applied function returns a like-indexed object.\n",
       "To preserve the previous behavior, use\n",
       "\n",
       "\t>>> .groupby(..., group_keys=False)\n",
@@ -530,7 +531,7 @@
        "(30410, 7917)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +740,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_feature_train = pd.DataFrame(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting estimator with 38 features.\n",
+      "Fitting estimator with 38 features.\n",
+      "Fitting estimator with 38 features.\n",
+      "Fitting estimator with 38 features.\n",
+      "Fitting estimator with 37 features.\n",
+      "Fitting estimator with 37 features.\n",
+      "Fitting estimator with 37 features.\n",
+      "Fitting estimator with 37 features.\n",
+      "Fitting estimator with 36 features.\n",
+      "Fitting estimator with 36 features.\n",
+      "Fitting estimator with 36 features.\n",
+      "Fitting estimator with 36 features.\n",
+      "Fitting estimator with 35 features.\n",
+      "Fitting estimator with 35 features.\n",
+      "Fitting estimator with 35 features.\n",
+      "Fitting estimator with 35 features.\n",
+      "Fitting estimator with 34 features.\n",
+      "Fitting estimator with 34 features.\n",
+      "Fitting estimator with 34 features.\n",
+      "Fitting estimator with 34 features.\n",
+      "Fitting estimator with 33 features.\n",
+      "Fitting estimator with 33 features.\n",
+      "Fitting estimator with 33 features.\n",
+      "Fitting estimator with 33 features.\n",
+      "Fitting estimator with 32 features.\n",
+      "Fitting estimator with 32 features.\n",
+      "Fitting estimator with 32 features.\n",
+      "Fitting estimator with 32 features.\n",
+      "Fitting estimator with 31 features.\n",
+      "Fitting estimator with 31 features.\n",
+      "Fitting estimator with 31 features.\n",
+      "Fitting estimator with 31 features.\n",
+      "Fitting estimator with 30 features.\n",
+      "Fitting estimator with 30 features.\n",
+      "Fitting estimator with 30 features.\n",
+      "Fitting estimator with 30 features.\n",
+      "Fitting estimator with 29 features.\n",
+      "Fitting estimator with 29 features.\n",
+      "Fitting estimator with 29 features.\n",
+      "Fitting estimator with 29 features.\n",
+      "Fitting estimator with 28 features.\n",
+      "Fitting estimator with 28 features.\n",
+      "Fitting estimator with 28 features.\n",
+      "Fitting estimator with 28 features.\n",
+      "Fitting estimator with 27 features.\n",
+      "Fitting estimator with 27 features.\n",
+      "Fitting estimator with 27 features.\n",
+      "Fitting estimator with 27 features.\n",
+      "Fitting estimator with 26 features.\n",
+      "Fitting estimator with 26 features.\n",
+      "Fitting estimator with 26 features.\n",
+      "Fitting estimator with 26 features.\n",
+      "Fitting estimator with 25 features.\n",
+      "Fitting estimator with 25 features.\n",
+      "Fitting estimator with 24 features.\n",
+      "Fitting estimator with 25 features.\n",
+      "Fitting estimator with 25 features.\n",
+      "Fitting estimator with 24 features.\n",
+      "Fitting estimator with 23 features.\n",
+      "Fitting estimator with 23 features.\n",
+      "Fitting estimator with 24 features.\n",
+      "Fitting estimator with 24 features.\n",
+      "Fitting estimator with 22 features.\n",
+      "Fitting estimator with 22 features.\n",
+      "Fitting estimator with 23 features.\n",
+      "Fitting estimator with 23 features.\n",
+      "Fitting estimator with 21 features.\n",
+      "Fitting estimator with 21 features.\n",
+      "Fitting estimator with 22 features.\n",
+      "Fitting estimator with 22 features.\n",
+      "Fitting estimator with 20 features.\n",
+      "Fitting estimator with 20 features.\n",
+      "Fitting estimator with 21 features.\n",
+      "Fitting estimator with 21 features.\n",
+      "Fitting estimator with 19 features.\n",
+      "Fitting estimator with 19 features.\n",
+      "Fitting estimator with 18 features.\n",
+      "Fitting estimator with 20 features.\n",
+      "Fitting estimator with 18 features.\n",
+      "Fitting estimator with 20 features.\n",
+      "Fitting estimator with 17 features.\n",
+      "Fitting estimator with 17 features.\n",
+      "Fitting estimator with 19 features.\n",
+      "Fitting estimator with 19 features.\n",
+      "Fitting estimator with 16 features.\n",
+      "Fitting estimator with 16 features.\n",
+      "Fitting estimator with 15 features.\n",
+      "Fitting estimator with 18 features.\n",
+      "Fitting estimator with 18 features.\n",
+      "Fitting estimator with 15 features.\n",
+      "Fitting estimator with 14 features.\n",
+      "Fitting estimator with 14 features.\n",
+      "Fitting estimator with 17 features.\n",
+      "Fitting estimator with 13 features.\n",
+      "Fitting estimator with 17 features.\n",
+      "Fitting estimator with 13 features.\n",
+      "Fitting estimator with 12 features.\n",
+      "Fitting estimator with 16 features.\n",
+      "Fitting estimator with 16 features.\n",
+      "Fitting estimator with 11 features.\n",
+      "Fitting estimator with 12 features.\n",
+      "Fitting estimator with 10 features.\n",
+      "Fitting estimator with 15 features.\n",
+      "Fitting estimator with 11 features.\n",
+      "Fitting estimator with 15 features.\n",
+      "Fitting estimator with 9 features.\n",
+      "Fitting estimator with 10 features.\n",
+      "Fitting estimator with 8 features.\n",
+      "Fitting estimator with 14 features.\n",
+      "Fitting estimator with 14 features.\n",
+      "Fitting estimator with 7 features.\n",
+      "Fitting estimator with 9 features.\n",
+      "Fitting estimator with 6 features.\n",
+      "Fitting estimator with 8 features.\n",
+      "Fitting estimator with 13 features.\n",
+      "Fitting estimator with 5 features.\n",
+      "Fitting estimator with 13 features.\n",
+      "Fitting estimator with 7 features.\n",
+      "Fitting estimator with 4 features.\n",
+      "Fitting estimator with 6 features.\n",
+      "Fitting estimator with 3 features.\n",
+      "Fitting estimator with 12 features.\n",
+      "Fitting estimator with 2 features.\n",
+      "Fitting estimator with 5 features.\n",
+      "Fitting estimator with 12 features.\n",
+      "Fitting estimator with 4 features.\n",
+      "Fitting estimator with 3 features.\n",
+      "Fitting estimator with 11 features.\n",
+      "Fitting estimator with 2 features.\n",
+      "Fitting estimator with 11 features.\n",
+      "Fitting estimator with 10 features.\n",
+      "Fitting estimator with 10 features.\n",
+      "Fitting estimator with 9 features.\n",
+      "Fitting estimator with 9 features.\n",
+      "Fitting estimator with 8 features.\n",
+      "Fitting estimator with 8 features.\n",
+      "Fitting estimator with 7 features.\n",
+      "Fitting estimator with 7 features.\n",
+      "Fitting estimator with 6 features.\n",
+      "Fitting estimator with 6 features.\n",
+      "Fitting estimator with 5 features.\n",
+      "Fitting estimator with 5 features.\n",
+      "Fitting estimator with 4 features.\n",
+      "Fitting estimator with 4 features.\n",
+      "Fitting estimator with 3 features.\n",
+      "Fitting estimator with 3 features.\n",
+      "Fitting estimator with 2 features.\n",
+      "Fitting estimator with 2 features.\n",
+      "Fitting estimator with 38 features.\n",
+      "Fitting estimator with 37 features.\n",
+      "Fitting estimator with 36 features.\n"
+     ]
+    }
+   ],
+   "source": [
+    "trans = RFECV(estimator=XGBRegressor(), step=1, cv=4 ,verbose=2 ,n_jobs=-1)\n",
+    "X_trans = trans.fit_transform(df_feature_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([ 0,  2,  3,  4,  5,  6,  7, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19,\n",
+       "            20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36,\n",
+       "            37],\n",
+       "           dtype='int64')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_retained_RFECV = df_feature_train.columns[trans.get_support()].values\n",
+    "df_useful_feature = df_feature_train.filter(items=columns_retained_RFECV)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -781,14 +983,14 @@
        "             num_parallel_tree=None, predictor=None, ...)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "xgbr = XGBRegressor(**best_combination)\n",
-    "xgbr.fit(X, y)"
+    "xgbr.fit(df_useful_feature, y_train)"
    ]
   },
   {
@@ -819,22 +1021,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                 Id    Predicted\n",
-      "count   7917.000000  7917.000000\n",
-      "mean   35679.634584  1896.335449\n",
-      "std     2289.051312   784.525879\n",
-      "min    31715.000000   305.052185\n",
-      "25%    33699.000000  1315.541382\n",
-      "50%    35680.000000  1738.119995\n",
-      "75%    37661.000000  2290.234863\n",
-      "max    39643.000000  7033.739746\n"
+     "ename": "ValueError",
+     "evalue": "Feature shape mismatch, expected: 35, got 38",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/gesposito/project/predict-shares-online-news/3_models_selection/model_xgboost_with_logs.ipynb Cell 25\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Blegionlogin.polito.it/home/gesposito/project/predict-shares-online-news/3_models_selection/model_xgboost_with_logs.ipynb#X31sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Make final predictions\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Blegionlogin.polito.it/home/gesposito/project/predict-shares-online-news/3_models_selection/model_xgboost_with_logs.ipynb#X31sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m y_pred \u001b[39m=\u001b[39m xgbr\u001b[39m.\u001b[39;49mpredict(df_working_df_eval\u001b[39m.\u001b[39;49mvalues)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Blegionlogin.polito.it/home/gesposito/project/predict-shares-online-news/3_models_selection/model_xgboost_with_logs.ipynb#X31sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m final_preds \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mexp(y_pred)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Blegionlogin.polito.it/home/gesposito/project/predict-shares-online-news/3_models_selection/model_xgboost_with_logs.ipynb#X31sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Write CSV\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/thesis/lib/python3.8/site-packages/xgboost/sklearn.py:1114\u001b[0m, in \u001b[0;36mXGBModel.predict\u001b[0;34m(self, X, output_margin, ntree_limit, validate_features, base_margin, iteration_range)\u001b[0m\n\u001b[1;32m   1112\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_can_use_inplace_predict():\n\u001b[1;32m   1113\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 1114\u001b[0m         predts \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_booster()\u001b[39m.\u001b[39;49minplace_predict(\n\u001b[1;32m   1115\u001b[0m             data\u001b[39m=\u001b[39;49mX,\n\u001b[1;32m   1116\u001b[0m             iteration_range\u001b[39m=\u001b[39;49miteration_range,\n\u001b[1;32m   1117\u001b[0m             predict_type\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mmargin\u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39mif\u001b[39;49;00m output_margin \u001b[39melse\u001b[39;49;00m \u001b[39m\"\u001b[39;49m\u001b[39mvalue\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m   1118\u001b[0m             missing\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmissing,\n\u001b[1;32m   1119\u001b[0m             base_margin\u001b[39m=\u001b[39;49mbase_margin,\n\u001b[1;32m   1120\u001b[0m             validate_features\u001b[39m=\u001b[39;49mvalidate_features,\n\u001b[1;32m   1121\u001b[0m         )\n\u001b[1;32m   1122\u001b[0m         \u001b[39mif\u001b[39;00m _is_cupy_array(predts):\n\u001b[1;32m   1123\u001b[0m             \u001b[39mimport\u001b[39;00m \u001b[39mcupy\u001b[39;00m  \u001b[39m# pylint: disable=import-error\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/thesis/lib/python3.8/site-packages/xgboost/core.py:2269\u001b[0m, in \u001b[0;36mBooster.inplace_predict\u001b[0;34m(self, data, iteration_range, predict_type, missing, validate_features, base_margin, strict_shape)\u001b[0m\n\u001b[1;32m   2265\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\n\u001b[1;32m   2266\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39m`shape` attribute is required when `validate_features` is True.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   2267\u001b[0m         )\n\u001b[1;32m   2268\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(data\u001b[39m.\u001b[39mshape) \u001b[39m!=\u001b[39m \u001b[39m1\u001b[39m \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_features() \u001b[39m!=\u001b[39m data\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]:\n\u001b[0;32m-> 2269\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   2270\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mFeature shape mismatch, expected: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_features()\u001b[39m}\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   2271\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mgot \u001b[39m\u001b[39m{\u001b[39;00mdata\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m   2272\u001b[0m         )\n\u001b[1;32m   2274\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[1;32m   2275\u001b[0m     _array_interface,\n\u001b[1;32m   2276\u001b[0m     _is_cudf_df,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2279\u001b[0m     _transform_pandas_df,\n\u001b[1;32m   2280\u001b[0m )\n\u001b[1;32m   2282\u001b[0m enable_categorical \u001b[39m=\u001b[39m _has_categorical(\u001b[39mself\u001b[39m, data)\n",
+      "\u001b[0;31mValueError\u001b[0m: Feature shape mismatch, expected: 35, got 38"
      ]
     }
    ],
@@ -848,7 +1048,7 @@
     "new_df['Id'] = id_col\n",
     "new_df['Predicted'] = final_preds\n",
     "print(new_df.describe())\n",
-    "new_df.to_csv('../output/output_xgboost_submit.csv', columns=['Id','Predicted'], index=False)"
+    "new_df.to_csv('../output/output_xgboost.csv', columns=['Id','Predicted'], index=False)"
    ]
   },
   {
